--- a/GusList/war/GusList.css
+++ b/GusList/war/GusList.css
@@ -2,30 +2,20 @@
 
 
 /** Example rules used by the template application (remove for your app) */
-h1 {
-  font-size: 2em;
+.appTitleBar {
+  font-size: 10em;
   font-weight: bold;
   color: #777777;
   margin: 40px 0px 70px;
   text-align: center;
 }
 
-.sendButton {
-  display: block;
-  font-size: 16pt;
+.postLabel {
+	margin: 10px 10px;
 }
 
-/** Most GWT widgets already have a style name defined */
-.gwt-DialogBox {
-  width: 400px;
-}
-
-.dialogVPanel {
-  margin: 5px;
-}
-
-.serverResponseLabelError {
-  color: red;
+.postInfoButton {
+	
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
